--- a/Python Skill/Typing/Typing python.ipynb
+++ b/Python Skill/Typing/Typing python.ipynb
@@ -1,249 +1,343 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# The Complete Python Typing & Type Hinting Tutorial\n",
-    "---\n",
-    "Python is a dynamically typed language, but **Type Hints** (introduced in PEP 484) allow you to specify the expected data types of variables, function parameters, and return values. \n",
-    "\n",
-    "### Why Use Typing?\n",
-    "* **Catch Bugs Early:** Tools like `mypy` find errors before you run the code.\n",
-    "* **Auto-complete:** IDEs (VS Code, PyCharm) provide better suggestions.\n",
-    "* **Documentation:** The code becomes self-documenting."
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wyGl38HiLt52"
+      },
+      "source": [
+        "# The Complete Python Typing & Type Hinting Tutorial\n",
+        "---\n",
+        "Python is a dynamically typed language, but **Type Hints** (introduced in PEP 484) allow you to specify the expected data types of variables, function parameters, and return values.\n",
+        "\n",
+        "### Why Use Typing?\n",
+        "* **Catch Bugs Early:** Tools like `mypy` find errors before you run the code.\n",
+        "* **Auto-complete:** IDEs (VS Code, PyCharm) provide better suggestions.\n",
+        "* **Documentation:** The code becomes self-documenting."
+      ],
+      "id": "wyGl38HiLt52"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2qAw0dAoLt54"
+      },
+      "source": [
+        "## 1. Basic Variable Annotations\n",
+        "You can annotate any variable by adding a colon and the type after the variable name."
+      ],
+      "id": "2qAw0dAoLt54"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "VhyWz9hyLt55"
+      },
+      "outputs": [],
+      "source": [
+        "from typing import Any\n",
+        "\n",
+        "age: int = 25\n",
+        "price: float = 19.99\n",
+        "name: str = \"Gemini\"\n",
+        "is_valid: bool = True\n",
+        "\n",
+        "# 'Any' is an escape hatch when you don't want to enforce a type\n",
+        "raw_data: Any = get_data_from_api()"
+      ],
+      "id": "VhyWz9hyLt55"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "odQFj9bzLt55"
+      },
+      "source": [
+        "## 2. Functions & Modern Union Types\n",
+        "Annotate parameters and return values using `->`.\n",
+        "\n",
+        "> **Note:** In Python 3.10+, we use the pipe operator `|` for Unions instead of the old `Union` or `Optional` keywords."
+      ],
+      "id": "odQFj9bzLt55"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TBPVobfcLt56"
+      },
+      "outputs": [],
+      "source": [
+        "# Old way: from typing import Union, Optional\n",
+        "# Modern way (Python 3.10+):\n",
+        "\n",
+        "def calculate_tax(amount: float, tax_rate: float | None = None) -> float:\n",
+        "    if tax_rate is None:\n",
+        "        tax_rate = 0.05\n",
+        "    return amount * tax_rate\n",
+        "\n",
+        "def process_id(user_id: int | str) -> str:\n",
+        "    return f\"User-{user_id}\""
+      ],
+      "id": "TBPVobfcLt56"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rywmSQ-WLt57"
+      },
+      "source": [
+        "## 3. Collections (Lists, Dicts, Sets)\n",
+        "Specify what is *inside* the container using square brackets `[]`."
+      ],
+      "id": "rywmSQ-WLt57"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "zrKVzNBBLt58"
+      },
+      "outputs": [],
+      "source": [
+        "# List of integers\n",
+        "scores: list[int] = [88, 92, 79]\n",
+        "\n",
+        "# Dict with string keys and integer values\n",
+        "inventory: dict[str, int] = {\"apples\": 10, \"bananas\": 5}\n",
+        "\n",
+        "# Tuples with specific lengths and types\n",
+        "location: tuple[float, float] = (45.523, -122.676)\n",
+        "\n",
+        "# Tuples of variable length\n",
+        "arbitrary_numbers: tuple[int, ...] = (1, 2, 3, 4, 5, 6)"
+      ],
+      "id": "zrKVzNBBLt58"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C0_GCMxZLt58"
+      },
+      "source": [
+        "## 4. Structural Typing (Protocols)\n",
+        "A `Protocol` defines an interface. Any class that has the required methods \"implements\" the protocol without needing to inherit from it (Static Duck Typing)."
+      ],
+      "id": "C0_GCMxZLt58"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Vm6McXEALt58"
+      },
+      "outputs": [],
+      "source": [
+        "from typing import Protocol\n",
+        "\n",
+        "class Flyer(Protocol):\n",
+        "    def fly(self) -> str: ...\n",
+        "\n",
+        "class Bird:\n",
+        "    def fly(self) -> str:\n",
+        "        return \"Flap flap\"\n",
+        "\n",
+        "class Airplane:\n",
+        "    def fly(self) -> str:\n",
+        "        return \"Engines roaring\"\n",
+        "\n",
+        "def take_off(entity: Flyer) -> None:\n",
+        "    print(entity.fly())\n",
+        "\n",
+        "take_off(Bird())\n",
+        "take_off(Airplane())"
+      ],
+      "id": "Vm6McXEALt58"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2N-EjZf3Lt59"
+      },
+      "source": [
+        "## 5. Generics\n",
+        "Generics allow you to write code that works with any type while still maintaining type safety."
+      ],
+      "id": "2N-EjZf3Lt59"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-ubM7zyDLt59"
+      },
+      "outputs": [],
+      "source": [
+        "from typing import TypeVar, Generic\n",
+        "\n",
+        "# Define a type variable\n",
+        "T = TypeVar('T')\n",
+        "\n",
+        "class Result(Generic[T]):\n",
+        "    def __init__(self, data: T, status: int):\n",
+        "        self.data = data\n",
+        "        self.status = status\n",
+        "\n",
+        "# Result with a string\n",
+        "res1 = Result[str](\"Success\", 200)\n",
+        "\n",
+        "# Result with an int\n",
+        "res2 = Result[int](42, 201)"
+      ],
+      "id": "-ubM7zyDLt59"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xd4Ep824Lt59"
+      },
+      "source": [
+        "## 6. Advanced Utility Types\n",
+        "* `Literal`: Restrict a value to specific strings or numbers.\n",
+        "* `Final`: Prevent a variable from being reassigned.\n",
+        "* `Callable`: Type hint for functions or lambdas."
+      ],
+      "id": "Xd4Ep824Lt59"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mEat3utjLt59",
+        "outputId": "ed80e47d-99b1-483c-b260-c2f0bd632783"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n"
+          ]
+        }
+      ],
+      "source": [
+        "from typing import Literal, Final, Callable\n",
+        "\n",
+        "# Literal: only allow 'read' or 'write'\n",
+        "mode: Literal['read', 'write'] = 'read'\n",
+        "\n",
+        "# Final: constant variable\n",
+        "PI: Final = 3.14159\n",
+        "\n",
+        "# Callable: takes two ints, returns an int\n",
+        "def execute_op(op: Callable[[int, int], int], a: int, b: int) -> int:\n",
+        "    return op(a, b)\n",
+        "\n",
+        "add = lambda x, y: x + y\n",
+        "print(execute_op(add, 10, 5))"
+      ],
+      "id": "mEat3utjLt59"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PI: Final = 3.14159\n",
+        "PI = 33"
+      ],
+      "metadata": {
+        "id": "pATTBRnqMFww"
+      },
+      "id": "pATTBRnqMFww",
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y-gjdZ30Lt59"
+      },
+      "source": [
+        "## 7. Typing for JSON-like Structures\n",
+        "Use `TypedDict` for dictionaries with specific, fixed keys."
+      ],
+      "id": "Y-gjdZ30Lt59"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "d2Emt6MpLt59"
+      },
+      "outputs": [],
+      "source": [
+        "from typing import TypedDict\n",
+        "\n",
+        "class Movie(TypedDict):\n",
+        "    title: str\n",
+        "    year: int\n",
+        "    director: str | None\n",
+        "\n",
+        "m: Movie = {\"title\": \"Inception\", \"year\": 2010, \"director\": \"Christopher Nolan\"}"
+      ],
+      "id": "d2Emt6MpLt59"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Summary Table\n",
+        "\n",
+        "Examples:\n",
+        "\n",
+        "| `typing` feature     | Example                              | Type Hint Purpose             |\n",
+        "| -------------------- | ------------------------------------ | ----------------------------- |\n",
+        "| `int`, `str`, `bool` | `x: int = 5`                         | Normal type hint for variable |\n",
+        "| `List`, `Dict`       | `names: List[str]`                   | Type hint for collections     |\n",
+        "| `Tuple`              | `coords: Tuple[int, int]`            | Fixed-size collection types   |\n",
+        "| `Optional`           | `age: Optional[int]`                 | Value may be `None`           |\n",
+        "| `Union`              | `x: Union[int, str]`                 | Either int or str             |\n",
+        "| `Literal`            | `status: Literal[\"pending\", \"done\"]` | Only specific values allowed  |\n",
+        "| `Final`              | `PI: Final = 3.14`                   | Constant value hint           |\n",
+        "| `Callable`           | `f: Callable[[int], str]`            | Function or lambda type       |\n",
+        "| `TypedDict`          | `class User(TypedDict): name: str`   | Dict with fixed key types     |\n",
+        "| `Annotated`          | `age: Annotated[int, \">=18\"]`        | Extra metadata for a type     |\n",
+        "\n",
+        "\n",
+        "All of these do not enforce types by Python itself. So they do not cause \"error\" — they are instructions for tools and humans."
+      ],
+      "metadata": {
+        "id": "u4QnsAtHXPTI"
+      },
+      "id": "u4QnsAtHXPTI"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UbzJ0-3vXPCZ"
+      },
+      "id": "UbzJ0-3vXPCZ",
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Basic Variable Annotations\n",
-    "You can annotate any variable by adding a colon and the type after the variable name."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Any\n",
-    "\n",
-    "age: int = 25\n",
-    "price: float = 19.99\n",
-    "name: str = \"Gemini\"\n",
-    "is_valid: bool = True\n",
-    "\n",
-    "# 'Any' is an escape hatch when you don't want to enforce a type\n",
-    "raw_data: Any = get_data_from_api()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Functions & Modern Union Types\n",
-    "Annotate parameters and return values using `->`. \n",
-    "\n",
-    "> **Note:** In Python 3.10+, we use the pipe operator `|` for Unions instead of the old `Union` or `Optional` keywords."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Old way: from typing import Union, Optional\n",
-    "# Modern way (Python 3.10+):\n",
-    "\n",
-    "def calculate_tax(amount: float, tax_rate: float | None = None) -> float:\n",
-    "    if tax_rate is None:\n",
-    "        tax_rate = 0.05\n",
-    "    return amount * tax_rate\n",
-    "\n",
-    "def process_id(user_id: int | str) -> str:\n",
-    "    return f\"User-{user_id}\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Collections (Lists, Dicts, Sets)\n",
-    "Specify what is *inside* the container using square brackets `[]`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# List of integers\n",
-    "scores: list[int] = [88, 92, 79]\n",
-    "\n",
-    "# Dict with string keys and integer values\n",
-    "inventory: dict[str, int] = {\"apples\": 10, \"bananas\": 5}\n",
-    "\n",
-    "# Tuples with specific lengths and types\n",
-    "location: tuple[float, float] = (45.523, -122.676)\n",
-    "\n",
-    "# Tuples of variable length\n",
-    "arbitrary_numbers: tuple[int, ...] = (1, 2, 3, 4, 5, 6)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Structural Typing (Protocols)\n",
-    "A `Protocol` defines an interface. Any class that has the required methods \"implements\" the protocol without needing to inherit from it (Static Duck Typing)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Protocol\n",
-    "\n",
-    "class Flyer(Protocol):\n",
-    "    def fly(self) -> str: ...\n",
-    "\n",
-    "class Bird:\n",
-    "    def fly(self) -> str:\n",
-    "        return \"Flap flap\"\n",
-    "\n",
-    "class Airplane:\n",
-    "    def fly(self) -> str:\n",
-    "        return \"Engines roaring\"\n",
-    "\n",
-    "def take_off(entity: Flyer) -> None:\n",
-    "    print(entity.fly())\n",
-    "\n",
-    "take_off(Bird())\n",
-    "take_off(Airplane())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. Generics\n",
-    "Generics allow you to write code that works with any type while still maintaining type safety."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import TypeVar, Generic\n",
-    "\n",
-    "# Define a type variable\n",
-    "T = TypeVar('T')\n",
-    "\n",
-    "class Result(Generic[T]):\n",
-    "    def __init__(self, data: T, status: int):\n",
-    "        self.data = data\n",
-    "        self.status = status\n",
-    "\n",
-    "# Result with a string\n",
-    "res1 = Result[str](\"Success\", 200)\n",
-    "\n",
-    "# Result with an int\n",
-    "res2 = Result[int](42, 201)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Advanced Utility Types\n",
-    "* `Literal`: Restrict a value to specific strings or numbers.\n",
-    "* `Final`: Prevent a variable from being reassigned.\n",
-    "* `Callable`: Type hint for functions or lambdas."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Literal, Final, Callable\n",
-    "\n",
-    "# Literal: only allow 'read' or 'write'\n",
-    "mode: Literal['read', 'write'] = 'read'\n",
-    "\n",
-    "# Final: constant variable\n",
-    "PI: Final = 3.14159\n",
-    "\n",
-    "# Callable: takes two ints, returns an int\n",
-    "def execute_op(op: Callable[[int, int], int], a: int, b: int) -> int:\n",
-    "    return op(a, b)\n",
-    "\n",
-    "add = lambda x, y: x + y\n",
-    "print(execute_op(add, 10, 5))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 7. Typing for JSON-like Structures\n",
-    "Use `TypedDict` for dictionaries with specific, fixed keys."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import TypedDict\n",
-    "\n",
-    "class Movie(TypedDict):\n",
-    "    title: str\n",
-    "    year: int\n",
-    "    director: str | None\n",
-    "\n",
-    "m: Movie = {\"title\": \"Inception\", \"year\": 2010, \"director\": \"Christopher Nolan\"}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary Table\n",
-    "\n",
-    "| Concept | Syntax | Description |\n",
-    "| :--- | :--- | :--- |\n",
-    "| **Basic** | `x: int` | Integer type |\n",
-    "| **Unions** | `int \\| str` | Can be int OR str |\n",
-    "| **Optional** | `str \\| None` | Can be string OR None |\n",
-    "| **Lists** | `list[int]` | List of integers |\n",
-    "| **Dicts** | `dict[str, int]` | Key is string, Value is int |\n",
-    "| **Constants** | `Final[int]` | Cannot be reassigned |\n",
-    "| **Interfaces** | `Protocol` | Structural type checking |"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.10"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
