--- a/Python Skill/functool/functool_Python.ipynb
+++ b/Python Skill/functool/functool_Python.ipynb
@@ -31,7 +31,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oEV0F06MbaW6"
+        "id": "oEV0F06MbaW6",
+        "outputId": "954d0956-f572-48c2-a6d4-9248521cf99e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from functools import partial\n",
@@ -46,9 +50,53 @@
         "print(square(5))  # 25\n",
         "print(cube(2))    # 8"
       ],
-      "execution_count": null,
-      "outputs": [],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "32\n",
+            "9\n"
+          ]
+        }
+      ],
       "id": "oEV0F06MbaW6"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from functools import partial\n",
+        "\n",
+        "def power(base: int, exponent: int) -> int:\n",
+        "    return base ** exponent\n",
+        "\n",
+        "# Create a new function that squares numbers\n",
+        "square = partial(power, base=2)\n",
+        "cube = partial(power, base=3)\n",
+        "\n",
+        "print(square(exponent=5))  # 32\n",
+        "print(cube(exponent = 2))    # 9\n"
+      ],
+      "metadata": {
+        "id": "7hHw1AZru-N4",
+        "outputId": "0b48398e-c32b-46ce-d690-1d593611497f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "7hHw1AZru-N4",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "32\n",
+            "9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -64,7 +112,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jVhGlCQnbaW8"
+        "id": "jVhGlCQnbaW8",
+        "outputId": "12c5cb16-2904-4a5f-e472-8daf02acc8ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from functools import reduce\n",
@@ -79,8 +131,17 @@
         "product = reduce(lambda x, y: x * y, numbers)\n",
         "print(product)  # 120"
       ],
-      "execution_count": null,
-      "outputs": [],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n",
+            "120\n"
+          ]
+        }
+      ],
       "id": "jVhGlCQnbaW8"
     },
     {
@@ -117,7 +178,7 @@
         "outputId": "d5e91da8-08db-4ed1-fd7d-fe94638c9ce7"
       },
       "id": "gygu_Nabco7R",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +216,7 @@
         "timCashing = end - start\n",
         "print(\"Cashing helped speed up the function \", timNotCashing/timCashing, \" times faster\" )"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
