--- a/Python Skill/functool/functool_Python.ipynb
+++ b/Python Skill/functool/functool_Python.ipynb
@@ -32,10 +32,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "oEV0F06MbaW6",
-        "outputId": "954d0956-f572-48c2-a6d4-9248521cf99e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "954d0956-f572-48c2-a6d4-9248521cf99e"
       },
       "source": [
         "from functools import partial\n",
@@ -79,11 +79,11 @@
         "print(cube(exponent = 2))    # 9\n"
       ],
       "metadata": {
-        "id": "7hHw1AZru-N4",
-        "outputId": "0b48398e-c32b-46ce-d690-1d593611497f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7hHw1AZru-N4",
+        "outputId": "0b48398e-c32b-46ce-d690-1d593611497f"
       },
       "id": "7hHw1AZru-N4",
       "execution_count": 7,
@@ -113,10 +113,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jVhGlCQnbaW8",
-        "outputId": "12c5cb16-2904-4a5f-e472-8daf02acc8ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "12c5cb16-2904-4a5f-e472-8daf02acc8ba"
       },
       "source": [
         "from functools import reduce\n",
@@ -156,6 +156,16 @@
       "id": "3eab_WjobaW9"
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Memoization"
+      ],
+      "metadata": {
+        "id": "6Tsz3mlCvvSM"
+      },
+      "id": "6Tsz3mlCvvSM"
+    },
+    {
       "cell_type": "code",
       "source": [
         "def fibonacci1(n: int) -> int:\n",
@@ -167,7 +177,7 @@
         "print(fibonacci1(40))  # 55\n",
         "end = time.time()\n",
         "\n",
-        "print(\"Not Caching make you speed up the function and the execuutaion time is: \", end - start)\n",
+        "print(\"Not Caching makes your function super slow and the executaion time is: \", end - start)\n",
         "timNotCashing = end - start"
       ],
       "metadata": {
@@ -175,17 +185,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gygu_Nabco7R",
-        "outputId": "d5e91da8-08db-4ed1-fd7d-fe94638c9ce7"
+        "outputId": "161471de-5a83-40d3-8772-5bc550eb4068"
       },
       "id": "gygu_Nabco7R",
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "102334155\n",
-            "Not Caching make you speed up the function and the execuutaion time is:  23.78514313697815\n"
+            "Not Caching makes your function super slow and the executaion time is:  23.2917423248291\n"
           ]
         }
       ]
@@ -197,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1BM1USBfbaW9",
-        "outputId": "a129bac0-257a-44de-cf8d-0402c14cd3d4"
+        "outputId": "2aa715b6-4b94-4815-fe0f-5ff7fb32cb5b"
       },
       "source": [
         "from functools import lru_cache\n",
@@ -216,16 +226,16 @@
         "timCashing = end - start\n",
         "print(\"Cashing helped speed up the function \", timNotCashing/timCashing, \" times faster\" )"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "139583862445\n",
-            "Caching make you speed up the function and the execuutaion time is:  0.00020074844360351562\n",
+            "Caching make you speed up the function and the execuutaion time is:  0.0001933574676513672\n",
             "CacheInfo(hits=53, misses=56, maxsize=None, currsize=56)\n",
-            "Cashing helped speed up the function  118482.32897862233  times faster\n"
+            "Cashing helped speed up the function  120459.49198520345  times faster\n"
           ]
         }
       ],
@@ -245,7 +255,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j4GXIv24baW9"
+        "id": "j4GXIv24baW9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9e3f120e-36ee-48bc-e8c3-e7981490d9a2"
       },
       "source": [
         "from functools import singledispatch\n",
@@ -266,9 +280,49 @@
         "print(describe(\"Hello\"))  # String of length 5\n",
         "print(describe([1,2,3]))   # Object of type <class 'list'>"
       ],
-      "execution_count": null,
-      "outputs": [],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Integer: 10\n",
+            "String of length 5\n",
+            "Object of type <class 'list'>\n"
+          ]
+        }
+      ],
       "id": "j4GXIv24baW9"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# multipledispatch is like c++ function overloading"
+      ],
+      "metadata": {
+        "id": "hh7uXH9q096i"
+      },
+      "id": "hh7uXH9q096i"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from multipledispatch import dispatch\n",
+        "\n",
+        "@dispatch(int, int)\n",
+        "def add(a, b):\n",
+        "    return a + b\n",
+        "\n",
+        "@dispatch(str, str)\n",
+        "def add(a, b):\n",
+        "    return a + b\n"
+      ],
+      "metadata": {
+        "id": "hociJm7v07Ro"
+      },
+      "id": "hociJm7v07Ro",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -284,7 +338,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "05SIaHXrbaW-"
+        "id": "05SIaHXrbaW-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c9754d85-5c8d-4fc5-d895-cb3a9bab441d"
       },
       "source": [
         "from functools import wraps\n",
@@ -308,8 +366,21 @@
         "print(greet.__name__)   # greet\n",
         "print(greet.__doc__)    # Greet someone by name"
       ],
-      "execution_count": null,
-      "outputs": [],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before function call\n",
+            "Hello, Alice!\n",
+            "After function call\n",
+            "Hello, Alice!\n",
+            "greet\n",
+            "Greet someone by name\n"
+          ]
+        }
+      ],
       "id": "05SIaHXrbaW-"
     },
     {
