--- a/Python Skill/pytest/Pytest.ipynb
+++ b/Python Skill/pytest/Pytest.ipynb
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "BThO4YcIpFVT"
       },
@@ -201,10 +201,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "71meT-tEpJcg",
-        "outputId": "215fa2e4-eb8d-4548-ddc5-feac8285bf63"
+        "outputId": "b4efafb5-a4c8-47b8-9d2b-172e58c5b591"
       },
       "id": "71meT-tEpJcg",
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "id": "Y6bYS-VxpFVV"
       },
@@ -281,10 +281,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_LUZDxTNpV01",
-        "outputId": "5e4c7355-e159-4cca-f1d9-4e1465df0a34"
+        "outputId": "c07f4510-7c5c-4d28-ad4d-cb5faa94c6e4"
       },
       "id": "_LUZDxTNpV01",
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 26,
       "metadata": {
         "id": "OLTdWABBpFVW"
       },
@@ -358,10 +358,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-2IGJLDYpevU",
-        "outputId": "586b1d8a-4bdd-41b1-f67a-d256c01f2e67"
+        "outputId": "6d922d00-038b-4b06-bc8e-18a052beafcf"
       },
       "id": "-2IGJLDYpevU",
-      "execution_count": 8,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 28,
       "metadata": {
         "id": "SagItsghpFVW"
       },
@@ -416,15 +416,12 @@
         "with open('Exceptions_test_example.py', 'w') as f:\n",
         "    f.write('''\n",
         "import pytest\n",
+        "def divide(a, b):\n",
+        "    return a / b\n",
         "\n",
-        "@pytest.fixture\n",
-        "def sample_list():\n",
-        "    return [1, 2, 3]\n",
-        "\n",
-        "def test_fixture(sample_list):\n",
-        "    assert sum(sample_list) == 6\n",
-        "    sample_list.append(4)\n",
-        "    assert sample_list[-1] == 4\n",
+        "def test_divide_zero():\n",
+        "    with pytest.raises(ZeroDivisionError):\n",
+        "        divide(1, 0)\n",
         "''')\n",
         "\n",
         "!pytest -v Exceptions_test_example.py"
@@ -434,10 +431,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jwzJ5W4JpnUS",
-        "outputId": "66a1f038-d25f-41ee-b0f4-37b46336b014"
+        "outputId": "4153009b-a99c-4741-82a2-c4eea436e604"
       },
       "id": "jwzJ5W4JpnUS",
-      "execution_count": 9,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,9 +447,9 @@
             "plugins: typeguard-4.4.4, langsmith-0.4.59, anyio-4.12.0\n",
             "\u001b[1mcollecting ... \u001b[0m\u001b[1m\rcollected 1 item                                                               \u001b[0m\n",
             "\n",
-            "Exceptions_test_example.py::test_fixture \u001b[32mPASSED\u001b[0m\u001b[32m                          [100%]\u001b[0m\n",
+            "Exceptions_test_example.py::test_divide_zero \u001b[32mPASSED\u001b[0m\u001b[32m                      [100%]\u001b[0m\n",
             "\n",
-            "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.02s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+            "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.01s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
           ]
         }
       ]
@@ -471,7 +468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 32,
       "metadata": {
         "id": "TKev2I7mpFVX"
       },
@@ -508,10 +505,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0LugsG0bpx0J",
-        "outputId": "9ff8d643-680a-4b23-84e4-9fe06341c8d3"
+        "outputId": "8c6614fc-c911-465f-d629-9c59c0dbdc1d"
       },
       "id": "0LugsG0bpx0J",
-      "execution_count": 11,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -524,7 +521,7 @@
             "plugins: typeguard-4.4.4, langsmith-0.4.59, anyio-4.12.0\n",
             "\u001b[1mcollecting ... \u001b[0m\u001b[1m\rcollected 1 item                                                               \u001b[0m\n",
             "\n",
-            "Exceptions_test_example.py::test_fixture \u001b[32mPASSED\u001b[0m\u001b[32m                          [100%]\u001b[0m\n",
+            "Exceptions_test_example.py::test_divide_zero \u001b[32mPASSED\u001b[0m\u001b[32m                      [100%]\u001b[0m\n",
             "\n",
             "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.01s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
           ]
@@ -545,7 +542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 34,
       "metadata": {
         "id": "LlyncgS9pFVX"
       },
@@ -582,10 +579,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZPNlNsfUqOxn",
-        "outputId": "0eed444b-3252-4e42-c423-bea0163ae237"
+        "outputId": "557f3c2f-4d06-404e-c106-f451253543e8"
       },
       "id": "ZPNlNsfUqOxn",
-      "execution_count": 17,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
